change bottom-section to flex container, align them correctly, apply correct colors to them, and voila

--- a/style.css
+++ b/style.css
@@ -84,3 +84,11 @@ header {
     display: flex;
     justify-content: flex-end;
 }
+
+.bottom-section {
+    display: flex;
+    justify-content: space-evenly;;
+    align-items: center;
+    background-color: #3882f6;
+    color: white;
+}
